Cleanup of FP16Phase removing duplicate code and leaning on InvokHelper